--- a/Komis/Views/Shared/_Layout.cshtml
+++ b/Komis/Views/Shared/_Layout.cshtml
@@ -3,14 +3,23 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link href="lib/Bootstrap/css/bootstrap.css" rel="stylesheet"/>
-    <link href="Content/site.css" rel="stylesheet"/>
+    <link href="~/lib/Bootstrap/css/bootstrap.css" rel="stylesheet"/>
+    <link href="~/Content/site.css" rel="stylesheet"/>
     <title>@ViewBag.Title</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a asp-controller="Home" asp-action="Index" class="navbar-brand">Komis</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div class="container body-content">
     <div class="row">
-        @RenderBody() 
+        @RenderBody()
     </div>
 </div>
 </body>
